--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>My Blog</title>
 </head>
 <body>
-  <h1 style="text-align:center;">Tengah</h1>
+  <h1 style="text-align:center;""font-family:verdana;">Tengah</h1>
 <p>Kalimat pertama</p>
 <p>Kalimat Kedua </p>
 
