--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <head>
 <title>My Blog</title>
 </head>
+<style>
+body {background-color: brown;} 
+h1   {color: orange;} 
+p    {color: yellow;}
+</style>
 <body>
-  <h1 style="text-align:center;""font-family:verdana;""font-size:300%;""color: blue;">Tengah</h1>
+  <h1 style="text-align:center;""font-family:verdana;">Tengah</h1>
 <p>Kalimat pertama</p>
 <p>Kalimat Kedua </p>
 
